Resolved gap issue between top and nav div

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,27 +12,17 @@ header {
   background-size: cover;
 }
 .logo-text {
-  /* margin-left: auto; */
-  /* font-weight: bolder; */
   font-family: "Great Vibes", "Cookie", "Roboto Slab", serif;
   padding-right: 10px;
   color: burlywood;
 }
 
-/* .logo-wrapper {
-  margin-top: auto;
-} */
-
 .nav {
   display: flex;
   background-color: black;
   color: aliceblue;
-  /* height: 50px; */
-  /* margin-bottom: auto; */
 }
-/* .slide {
-  flex: 1;
-} */
+
 ul {
   display: flex;
 }
